fix(home): Fixes
- Fixed issues with card styling
 - Fixed issues with intro text not covering all  screen for mobile

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -19,13 +19,16 @@ p {
   flex-direction: row;
   align-content: center;
   justify-content: center;
+  gap: 32px;
 }
 
 .card {
-  margin: 10px;
-  width: 250px;
-  min-height: 250px;
-  padding: 10px;
+
+}
+
+.intro{
+  text-align: center;
+  width: 50%;
 }
 
 .card img {
@@ -42,6 +45,9 @@ p {
   .cards-container {
     flex-direction: column;
     gap: 32px;
+  }
+  .intro{
+    width: 100%;
   }
 
   .card {
